{mensaje_del_commit}

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/service-1.jpg" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/servicio-1.jpg" alt="">
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="#"></i>Torta 1</h4>
@@ -136,7 +136,7 @@
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/service-2.jpg" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/servicio-2.jpg" alt="">
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="#"></i>Torta 1</h4>
@@ -147,7 +147,7 @@
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/service-3.jpg" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/servicio-3.jpg" alt="">
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="#"></i>Torta 1</h4>
@@ -158,7 +158,7 @@
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/service-4.jpg" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/servicio-4.jpg" alt="">
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="#"></i>Torta 1</h4>
