--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,11 @@
 </head>
 
 <body>
-    <!-- Navbar Start -->
+    <!-- Botón de WhatsApp -->
+<a href="https://wa.me/5491166205844" target="_blank" class="whatsapp-button" aria-label="Chatear por WhatsApp">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
+</a>
+<!-- Navbar Start -->
     <div class="container-fluid p-0 nav-bar">
         <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3">
             <a href="index.html" class="navbar-brand px-lg-4 m-0">
