--- a/menu.html
+++ b/menu.html
@@ -22,12 +22,16 @@
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
-    <!-- Customized Bootstrap Stylesheet -->
+    <link href="css/whatsapp.css" rel="stylesheet">
     <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <!-- Navbar Start -->
+    <!-- Botón de WhatsApp -->
+<a href="https://wa.me/5491166205844" target="_blank" class="whatsapp-button" aria-label="Chatear por WhatsApp">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
+</a>
+<!-- Navbar Start -->
     <div class="container-fluid p-0 nav-bar">
         <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3">
             <a href="index.html" class="navbar-brand px-lg-4 m-0">
