--- a/service.html
+++ b/service.html
@@ -22,12 +22,16 @@
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
-    <!-- Customized Bootstrap Stylesheet -->
+    <link href="css/whatsapp.css" rel="stylesheet">
     <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <!-- Navbar Start -->
+    <!-- Botón de WhatsApp -->
+<a href="https://wa.me/5491166205844" target="_blank" class="whatsapp-button" aria-label="Chatear por WhatsApp">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
+</a>
+<!-- Navbar Start -->
     <div class="container-fluid p-0 nav-bar">
         <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3">
             <a href="index.html" class="navbar-brand px-lg-4 m-0">
@@ -75,44 +79,77 @@
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/servicio-1.jpg" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/bomb_cake.PNG" alt="" style="height: 200px; width: 200px; object-fit: cover;">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="#"></i>Torta 1</h4>
-                            <p class="m-0">Hecha con Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, recusandae.</p>
+                            <h4><i class="#"></i>Bomb Cake</h4>
+                            <p class="m-0">Base de brownie, relleno de chocotorta, Oreo, Kinder, dulce de leche y crema. Una bomba irresistible.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/servicio-2.jpg" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/carrot_cake.png" alt=""  style="height: 200px; width: 200px; object-fit: cover;">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="#"></i>Torta 1</h4>
-                            <p class="m-0">Hecha con Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, recusandae.</p>
+                            <h4><i class="#"></i>Carrot Cake</h4>
+                            <p class="m-0">Torta de zanahoria con nueces, especias suaves y cobertura de cream cheese.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/servicio-3.jpg" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/chocotorta_franui.JPG" alt=""  style="height: 200px; width: 200px; object-fit: cover;">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="#"></i>Torta 1</h4>
-                            <p class="m-0">Hecha con Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, recusandae.</p>
+                            <h4><i class="#"></i>Chocotorta Franui</h4>
+                            <p class="m-0">La clásica de toda la vida, con un plus de Franui arriba. Cremosa, fresca y golosa.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/servicio-4.jpg" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/matilda.jpg" alt=""  style="height: 200px; width: 200px; object-fit: cover;">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="#"></i>Torta 1</h4>
-                            <p class="m-0">Hecha con Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, recusandae.</p>
+                            <h4><i class="#"></i>Matilda</h4>
+                            <p class="m-0">Súper húmeda y chocolatosa. Con mucho cacao, ganache y espíritu goloso. La favorita de todos.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 mb-5">
+                    <div class="row align-items-center">
+                        <div class="col-sm-5">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/tentacion_franui.png" alt=""  style="height: 200px; width: 200px; object-fit: cover;">
+                        </div>
+                        <div class="col-sm-7">
+                            <h4><i class="#"></i>Tentación Franui</h4>
+                            <p class="m-0">Masa crujiente de vainilla, reducción de frutos rojos, doble ganache (blanco y negro) y Franouilles. Dulce, fresca y gourmet.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 mb-5">
+                    <div class="row align-items-center">
+                        <div class="col-sm-5">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/torta_oreo.PNG" alt=""  style="height: 200px; width: 200px; object-fit: cover;">
+                        </div>
+                        <div class="col-sm-7">
+                            <h4><i class="#"></i>Torta Oreo</h4>
+                            <p class="m-0">Rellena de chocotorta bien cremosa con galletitas Oreo. Crocante, dulce y nostálgica.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 mb-5">
+                    <div class="row align-items-center">
+                        <div class="col-sm-5">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/red_velvet.PNG" alt=""  style="height: 200px; width: 200px; object-fit: cover;">
+                        </div>
+                        <div class="col-sm-7">
+                            <h4><i class="#"></i>Red Velvet</h4>
+                            <p class="m-0">Clásica, húmeda y esponjosa, con suaves capas rojo intenso y un cremoso frosting de queso.</p>
                         </div>
                     </div>
                 </div>
