--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                     <a href="index.html" class="nav-item nav-link active">Inicio</a>
                     <a href="about.html" class="nav-item nav-link">Nosotros</a>
                     <a href="service.html" class="nav-item nav-link">Productos</a>
-                    <a href="menu.html" class="nav-item nav-link">Menu</a>
+                    <!-- <a href="menu.html" class="nav-item nav-link">Menu</a> -->
                     <a href="contact.html" class="nav-item nav-link">Contacto</a>
                 </div>
             </div>
