--- a/service.html
+++ b/service.html
@@ -101,10 +101,10 @@
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/chocotorta_franui.JPG" alt=""  style="height: 200px; width: 200px; object-fit: cover;">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/chocotorta_franui.png" alt=""  style="height: 200px; width: 200px; object-fit: cover;">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="#"></i>Chocotorta Franui</h4>
+                            <h4><i class="#"></i>Chocotorta FRANUI</h4>
                             <p class="m-0">La clásica de toda la vida, con un plus de Franui arriba. Cremosa, fresca y golosa.</p>
                         </div>
                     </div>
@@ -123,10 +123,10 @@
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/tentacion_franui.png" alt=""  style="height: 200px; width: 200px; object-fit: cover;">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/tentacion_franui.jpg" alt=""  style="height: 200px; width: 200px; object-fit: cover;">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="#"></i>Tentación Franui</h4>
+                            <h4><i class="#"></i>Tentación FRANUI</h4>
                             <p class="m-0">Masa crujiente de vainilla, reducción de frutos rojos, doble ganache (blanco y negro) y Franouilles. Dulce, fresca y gourmet.</p>
                         </div>
                     </div>
