--- a/about.html
+++ b/about.html
@@ -77,9 +77,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 py-0 py-lg-5">
-                    <h1 class="mb-3">Nuestros inicios</h1>
-                    <h5 class="mb-3">Eos kasd eos dolor vero vero, lorem stet diam rebum. Ipsum amet sed vero dolor sea</h5>
-                    <p>Takimata sed vero vero no sit sed, justo clita duo no duo amet et, nonumy kasd sed dolor eos diam lorem eirmod. Amet sit amet amet no. Est nonumy sed labore eirmod sit magna. Erat at est justo sit ut. Labor diam sed ipsum et eirmod</p>
+                    <h1 class="mb-3">📍 Nuestros comienzos</h1>
+                    <h5 class="mb-3">I Love Palermo nació de un sueño y una pasión compartida: crear un espacio donde el buen café, la pastelería artesanal y el disfrute cotidiano se unan en una experiencia real.</h5>
+                    <p>En plena Palermo, abrimos nuestras puertas con la idea de ofrecer algo más que una cafetería: un punto de encuentro para los que aman lo simple, lo bien hecho y lo auténtico.</p>
+                    <p>Desde nuestros primeros días apostamos por la calidad, el trabajo con productores locales y el amor por los detalles. Cada torta, cada café, cada sonrisa, forma parte de una historia que seguimos escribiendo junto a quienes nos eligen todos los días.</p>
                     <!-- <a href="" class="btn btn-secondary font-weight-bold py-2 px-4 mt-2">Learn More</a> -->
                 </div>
                 <div class="col-lg-4 py-5 py-lg-0" style="min-height: 500px;">
@@ -88,11 +89,17 @@
                     </div>
                 </div>
                 <div class="col-lg-4 py-0 py-lg-5">
-                    <h1 class="mb-3">Creciendo juntos</h1>
-                    <p>Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est dolor</p>
-                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</h5>
-                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</h5>
-                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</h5>
+                    <h1 class="mb-3">❤ Nuestros valores y propuesta</h1>
+                    <p>
+                        En I Love Palermo creemos en hacer las cosas con sentido.
+                        Nuestra propuesta se basa en tres pilares:
+                    </p>
+                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>☕ Café de especialidad servido con dedicación</h5>
+                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>🍰 Pastelería artesanal, fresca y de elaboración propia</h5>
+                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>🌿 Un ambiente cálido, cercano y pensado para disfrutar</h5>
+                    <p>Trabajamos con ingredientes de calidad, cuidamos cada paso de lo que servimos y valoramos el trato humano, tanto con nuestros clientes como con nuestro equipo.</p>
+                    <p>Promovemos un consumo consciente, respetuoso con los recursos y con foco en el disfrute genuino.</p>
+                    <p>Nos mueve el deseo de seguir creciendo sin perder lo más importante: el amor con el que empezamos.</p>
                     <!-- <a href="" class="btn btn-primary font-weight-bold py-2 px-4 mt-2">Learn More</a> -->
                 </div>
             </div>
