--- a/index.html
+++ b/index.html
@@ -94,10 +94,9 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 py-0 py-lg-5">
-                    <h1 class="mb-3">Nuestros inicios</h1>
-                    <h5 class="mb-3">Eos kasd eos dolor vero vero, lorem stet diam rebum. Ipsum amet sed vero dolor sea</h5>
-                    <p>Takimata sed vero vero no sit sed, justo clita duo no duo amet et, nonumy kasd sed dolor eos diam lorem eirmod. Amet sit amet amet no. Est nonumy sed labore eirmod sit magna. Erat at est justo sit ut. Labor diam sed ipsum et eirmod</p>
-                    <!-- <a href="" class="btn btn-secondary font-weight-bold py-2 px-4 mt-2">Learn More</a> -->
+                    <h1 class="mb-3">📍 Nuestros comienzos</h1>
+                    <h5 class="mb-3">I Love Palermo nació de un sueño y una pasión compartida: crear un espacio donde el buen café, la pastelería artesanal y el disfrute cotidiano se unan en una experiencia real.</h5>
+                    <a href="about.html" class="btn btn-secondary font-weight-bold py-2 px-4 mt-2">Conocer más</a>
                 </div>
                 <div class="col-lg-4 py-5 py-lg-0" style="min-height: 500px;">
                     <div class="position-relative h-100">
@@ -105,12 +104,15 @@
                     </div>
                 </div>
                 <div class="col-lg-4 py-0 py-lg-5">
-                    <h1 class="mb-3">Creciendo juntos</h1>
-                    <p>Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est dolor</p>
-                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</h5>
-                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</h5>
-                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</h5>
-                    <!-- <a href="" class="btn btn-primary font-weight-bold py-2 px-4 mt-2">Learn More</a> -->
+                    <h1 class="mb-3">❤ Nuestros valores y propuesta</h1>
+                    <p>
+                        En I Love Palermo creemos en hacer las cosas con sentido.
+                        Nuestra propuesta se basa en tres pilares:
+                    </p>
+                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>☕ Café de especialidad servido con dedicación</h5>
+                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>🍰 Pastelería artesanal, fresca y de elaboración propia</h5>
+                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>🌿 Un ambiente cálido, cercano y pensado para disfrutar</h5>
+                    <a href="about.html" class="btn btn-secondary font-weight-bold py-2 px-4 mt-2">Conocer más</a>
                 </div>
             </div>
         </div>
@@ -140,7 +142,7 @@
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/tentacion_franui.png" alt=""  style="height: 200px; width: 200px; object-fit: cover;">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/tentacion_franui.jpg" alt=""  style="height: 200px; width: 200px; object-fit: cover;">
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="#"></i>Tentación Franui</h4>
