--- a/service.html
+++ b/service.html
@@ -183,6 +183,21 @@
                     <h6 class="text-white text-uppercase">Lunes - Domingo</h6>
                     <p>8.00 - 20.00</p>
                 </div>
+
+                <!-- Botón Trabajá con nosotros -->
+                <div class="mt-4">
+                    <a href="https://wa.me/5492344401169?text=👋%20Hola!%20Quisiera%20postularme%20para%20trabajar%20en%20la%20cafetería.%20¿Podrían%20contarme%20cómo%20enviar%20mi%20CV%20o%20más%20información?%20🙌"
+                    class="btn btn-primary btn-block font-weight-bold py-2 w-50">
+                        📩 Trabajá con nosotros
+                    </a>
+                </div>
+
+                <div class="mt-4">
+                    <a href="https://wa.me/5492344401169?text=👋%20Hola!%20Quisiera%20postularme%20para%20trabajar%20en%20la%20cafetería.%20¿Podrían%20contarme%20cómo%20enviar%20mi%20CV%20o%20más%20información?%20🙌"
+                    class="btn btn-primary btn-block font-weight-bold py-2 w-50">
+                        📩 Franquicias
+                    </a>
+                </div>
             </div>
  
         </div>
