--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <div class="container-fluid p-0 nav-bar">
         <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3">
             <a href="index.html" class="navbar-brand px-lg-4 m-0">
-                <h1 class="m-0 display-4 text-uppercase text-white">I love Palermo</h1>
+                <img src="img/ChatGPT Image 3 jul 2025, 20_30_07.png" alt="Image" style="height: 60px; width: 60px; ">
+
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -126,6 +127,14 @@
             <div class="section-title">
                 <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Nuestros productos</h4>
                 <h1 class="display-4">Pastelería</h1>
+                <div class="row">
+                    <div class="col-12 d-flex justify-content-center mt-4">
+                        <a href="service.html" class="btn btn-primary font-weight-bold py-3 px-5">
+                            🍰 Ver todos los productos
+                        </a>
+                    </div>
+                </div>
+
             </div>
             <div class="row">
                 <div class="col-lg-6 mb-5">
@@ -172,6 +181,8 @@
                         </div>
                     </div>
                 </div>
+
+
             </div>
         </div>
     </div>
@@ -277,39 +288,44 @@
     <!-- Testimonial End -->
 
 
-    <!-- Footer Start -->
-    <div class="container-fluid footer text-white mt-5 pt-5 px-0 position-relative overlay-top">
-        <div class="row mx-0 pt-5 px-sm-3 px-lg-5 mt-4">
-            <div class="col-lg-4 col-md-6 mb-5">
-                <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Contact</h4>
-                <p><i class="fa fa-map-marker-alt mr-2"></i>Malabia 2221, Buenos Aires, Argentina</p>
-                <p><i class="fa fa-phone-alt mr-2"></i>+54 2344 40-1169</p>
-                <p class="m-0"><i class="fa fa-envelope mr-2"></i>ilovepalermo4@gmail.com</p>
+<!-- Footer Start -->
+<div class="container-fluid footer text-white mt-5 pt-5 px-0 position-relative overlay-top">
+    <div class="row mx-0 pt-5 px-sm-3 px-lg-5 mt-4">
+        <div class="col-lg-4 col-md-6 mb-5">
+            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Contact</h4>
+            <p><i class="fa fa-map-marker-alt mr-2"></i>Malabia 2221, Buenos Aires, Argentina</p>
+            <p><i class="fa fa-phone-alt mr-2"></i>+54 2344 40-1169</p>
+            <p class="m-0"><i class="fa fa-envelope mr-2"></i>ilovepalermo4@gmail.com</p>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-5">
+            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">¡Seguinos en redes!</h4>
+            <div class="d-flex justify-content-start">
+                <a class="btn btn-lg btn-outline-light btn-lg-square" href="https://www.instagram.com/ilovepalermocafe/?hl=es"><i class="fab fa-instagram"></i></a>
             </div>
-            <div class="col-lg-4 col-md-6 mb-5">
-                <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">¡Seguinos en redes!</h4>
-                <div class="d-flex justify-content-start">
-<!--                     <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a> -->
-                    <a class="btn btn-lg btn-outline-light btn-lg-square" href="https://www.instagram.com/ilovepalermocafe/?hl=es"><i class="fab fa-instagram"></i></a>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 mb-5">
-                <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Horarios</h4>
-                <div>
-                    <h6 class="text-white text-uppercase">Lunes - Domingo</h6>
-                    <p>8.00 - 20.00</p>
-                </div>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-5">
+            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Horarios</h4>
+            <div>
+                <h6 class="text-white text-uppercase">Lunes - Domingo</h6>
+                <p>8.00 - 20.00</p>
             </div>
 
-        </div>
-        <div class="container-fluid text-center text-white border-top mt-4 py-4 px-sm-3 px-md-5" style="border-color: rgba(256, 256, 256, .1) !important;">
-            <p class="mb-2 text-white">Copyright &copy; <a class="font-weight-bold" href="#">Domain</a>. Todos los derechos reservados.</a></p>
-            <p class="m-0 text-white">Designed by <a class="font-weight-bold" href="https://www.instagram.com/daringdigitalagency/">Daring Digital</a></p>
+            <!-- Botón Trabajá con nosotros -->
+            <div class="mt-4">
+                <a href="https://wa.me/5492344401169?text=👋%20Hola!%20Quisiera%20postularme%20para%20trabajar%20en%20la%20cafetería.%20¿Podrían%20contarme%20cómo%20enviar%20mi%20CV%20o%20más%20información?%20🙌"
+                   class="btn btn-primary btn-block font-weight-bold py-2 w-50">
+                    📩 Trabajá con nosotros
+                </a>
+            </div>
         </div>
     </div>
-    <!-- Footer End -->
+    <div class="container-fluid text-center text-white border-top mt-4 py-4 px-sm-3 px-md-5" style="border-color: rgba(256, 256, 256, .1) !important;">
+        <p class="mb-2 text-white">Copyright &copy; <a class="font-weight-bold" href="#">Domain</a>. Todos los derechos reservados.</p>
+        <p class="m-0 text-white">Designed by <a class="font-weight-bold" href="https://www.instagram.com/daringdigitalagency/">Daring Digital</a></p>
+    </div>
+</div>
+<!-- Footer End -->
+
 
 
     <!-- Back to Top -->
